--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Serverless TODO image app",
   "dependencies": {
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
     "aws-xray-sdk": "^2.2.0",
-    "axios": "^0.18.0",
+    "axios": "^0.21.4",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.27.0",
@@ -24,7 +26,7 @@
     "serverless-plugin-canary-deployments": "^0.4.7",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
-    "serverless-webpack": "^5.2.0",
+    "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
     "typescript": ">=3.8.0",
     "webpack": "^4.29.6"
